[package]
name = "blaze-ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pem = "1.1.0"
lazy_static = "1.4.0"
rc4 = "0.1.0"
sha = "1.0.3"
derive_more = "0.99.17"
ring = "0.16.20"
rsa = "0.6.1"
md5 = "0.7.0"
