[package]
name = "blaze-ssl"
version = "0.1.0"
edition = "2021"
description = "Legacy SSLv3 bare minimum implementation for gosredirector.ea.com"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/blaze-ssl"
readme = "README.md"
keywords = ["EA", "ssl", "sslv3"]
categories = ["network-programming", "parser-implementations"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
pem = "1.1.0"
lazy_static = "1.4.0"
rc4 = "0.1.0"
derive_more = "0.99.17"
ring = "0.16.20"
rsa = "0.6.1"
md5 = "0.7.0"
sha1_smol = "1.0.0"